# powerwashbrothers-services-website_main

./: .gitignore  LICENSE  README.md  app.py  database.py  email_templates.py  logging_config.py  pyproject.toml  recaptcha.py  requirements.txt  validation.py
.github/workflows/: ci.yml
logs/: app.log.1  app.log.2
templates/: about.html  admin_orders.html  contactform.html  faqs.html  footer.html  homepage.html  navbar.html  order_success.html  reviews.html  service_details.html  service_order_form.html  services.html
tests/: __init__.py  test_app.py  test_database.py
